[project]
name = "graph-rag-mcp"
version = "0.1.0"
description = "Multi-tenant Graph RAG MCP server backed by Aerospike Graph"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
    "gremlinpython>=3.7.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
vector = [
    "aerospike-vector-search>=4.0",
]

[project.scripts]
graph-rag-ingest = "src.ingestion.ingest:main"
graph-rag-server = "src.server:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
